k8s/hello/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello
  name: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - image: learnistio/helloworld:1.0.0
        imagePullPolicy: IfNotPresent
        name: helloworld
        ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello
  name: hello
spec:
  selector:
    app: hello
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
