k8s/hello/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-vs
spec:
  hosts:
    - 'hello.demo'
  gateways:
    - gateway
  http:
    - route:
      - destination:
          host: hello.default.svc.cluster.local  ### <=== IF YOU ARE WORKING ON DIFFERENT NAMESPACE, PAY ATTENTION TO THIS SERVICE
          port:
            number: 80
